--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "firebase-admin": "^11.11.0",
     "firebase-functions": "^4.5.0",
     "mongoose": "^7.6.3",
