--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
   "license": "ISC",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "jest"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -23,6 +24,8 @@
     "nodemailer": "^6.9.7"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3",
     "nodemon": "^3.1.0"
   }
 }
